// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label renders consistently 1`] = `
.c0 {
  display: inline-block;
  font-weight: 500;
  color: #ffffff;
  border-radius: 100px;
  background-color: #6e7781;
  font-size: 12px;
  line-height: 20px;
  padding: 0 8px;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<span
  className="c0"
/>
`;

exports[`Label respects the "outline" prop 1`] = `
.c0 {
  display: inline-block;
  font-weight: 500;
  color: #ffffff;
  border-radius: 100px;
  background-color: #6e7781;
  font-size: 12px;
  line-height: 20px;
  padding: 0 8px;
  margin-top: -1px;
  margin-bottom: -1px;
  color: #57606a;
  border: 1px solid #d0d7de;
  box-shadow: none;
  background-color: transparent;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<span
  className="c0"
/>
`;

exports[`Label respects the "variant" prop 1`] = `
.c0 {
  display: inline-block;
  font-weight: 500;
  color: #ffffff;
  border-radius: 100px;
  background-color: #6e7781;
  font-size: 14px;
  line-height: 16px;
  padding: 8px 12px;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<span
  className="c0"
/>
`;
